@@ -1,3 +1,6 @@
+2011-09-20 tatuya
+* Modify Order_zSelectMovement  to make Packing List enable to represent Transfer of rights(ownership). To do this, remove WHERE expression to exclude simulation movements that have same source and destination.
+
 2011-09-15 tatuya
 * Fix the issue that Sale Packing List wrongly has Root Applied Rule sometimes when it is created by Delivery Builder with a site which has many activity nodes.
 
